SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

Refactoring: The "SQL Scripts"-Plugin's functionality was moved to SQuirreL's core.
  The "SQL Scripts"-Plugin won't be shipped anymore
  and in case it is still found it is programmatically kept from being loaded.
  Users are advised to check their scripting preferences because previous preferences were lost.
  See menu File --> Global Preferences --> Tab "SQL Scripts".

Object tree: New right mouse menus in "Scripts" submenu:
  "Store selected tables' data in files" and "Create INSERT statements file from selected tables"

Graph Plugin: The standard format for saving Graphs (ER diagrams) as images is now PNG instead of JPG.

Graph Plugin:
  When a Graph (ER diagram) is renamed (using the right mouse menu or start button on the lower left)
  the current name is now suggested.

#1519 (in bugs): The caret/cursor position indicator at the lower right of a Session panel
  now also shows the caret/cursor's position in the current SQL if applicable.

Introduced Java 21 compatibility.

SQL Script Plugin: In analogy to the existing syntax to export a SQL result directly using the syntax
    @file '/tmp/customers.xlsx' SELECT * FROM customers
  one may now directly create an MS-Excel workbook file with multiple sheets using the following syntax:
    @msExcelWorkbook 'C:/tmp/out.xlsx'
    @sheet 'Orders' SELECT * FROM orders;
    @sheet 'Stores' SELECT * FROM stores;
  where the ";" may need to be replaced by the SQL separator in use.

SQL editor: Keyboard shortcut ctrl+w
   on first stroke selects the current word,
   on second stroke selects the end of the current line starting from the current word,
   on third stroke selects the whole current line.

SQL editor: Improvements of multiple caret/cursor editing: