@@ -14,3 +14,5 @@ StoredObjectTreeSelectionDlg.title=Object tree selections
 StoredObjectTreeSelectionDlg.ok=Ok
 StoredObjectTreeSelectionDlg.cancel=Cancel
 StoredObjectTreeSelectionDlg.delete.selected=Delete selected
+
+ApplyObjectTreeSelectionFromClipAction.failed=Failed to apply Object tree selection from clipboard. Probably the clipboard does not contain an Object tree selection. See log for details.
