@@ -6,6 +6,7 @@ import java.util.List;
 public class ObjectTreePathSelection
 {
    private List<String> _simpleNamePath = new ArrayList<>();
+   private String _typeName;
 
    public List<String> getSimpleNamePath()
    {
@@ -15,5 +16,15 @@ public class ObjectTreePathSelection
    public void setSimpleNamePath(List<String> simpleNamePath)
    {
       _simpleNamePath = simpleNamePath;
+   }
+
+   public void setTypeName(String typeName)
+   {
+      _typeName = typeName;
+   }
+
+   public String getTypeName()
+   {
+      return _typeName;
    }
 }
